공연 검색 + DB 저장 오류 발견